--- a/src/app/components/article/article.component.css
+++ b/src/app/components/article/article.component.css
@@ -6,6 +6,9 @@
     background: url("../../../assets/back.gif") no-repeat fixed;
     background-size: cover;
     user-select: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 #traparent {
